--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "guzzlehttp/guzzle": "^7.9"
   },
   "require-dev": {
-    "phpunit/phpunit": "^11.3"
+    "phpunit/phpunit": "^11.3",
+    "rector/rector": "^1.2"
   },
   "license": "MIT",
   "autoload": {
