--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^11.3",
-    "rector/rector": "^1.2"
+    "rector/rector": "^1.2",
+    "friendsofphp/php-cs-fixer": "^3.64"
   },
   "license": "MIT",
   "autoload": {
