--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,24 @@
 {
   "name": "nick-smit/openf1-api",
   "description": "An API client for openf1.org",
-  "type": "library",
+  "keywords": ["OpenF1", "Api", "Client", "Formula 1"],
+  "homepage": "https://github.com/nick-smit/openf1-api",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Nick Smit",
+      "email": "nicksmit1994@gmail.com"
+    }
+  ],
   "require": {
-    "php": "^8.3",
-    "guzzlehttp/guzzle": "^7.9"
+    "php": ">=8.3",
+    "guzzlehttp/guzzle": "^6.5|^7.4.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.3",
     "rector/rector": "^1.2",
     "friendsofphp/php-cs-fixer": "^3.64"
   },
-  "license": "MIT",
   "autoload": {
     "psr-4": {
       "NickSmit\\OpenF1Api\\": "src/"
@@ -19,14 +26,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\": "tests/"
+      "NickSmit\\OpenF1Api\\Tests\\": "tests/"
     }
-  },
-  "authors": [
-    {
-      "name": "Nick Smit",
-      "email": "nicksmit1994@gmail.com"
-    }
-  ],
-  "minimum-stability": "stable"
+  }
 }
